@@ -6,6 +6,7 @@
 - fixed making insecure HTTPS requests by [DJTripper](https://github.com/DJTripper)
 - fixed `RESTBuilder.insecure()` method
 - extended `jsonschema.transform(value, callback, [partial])` by adding `partial` argument
+- `mail_smtp_options` supports `token {String}` for OAuth 2.0 Access Token
 
 ========================
 0.0.69
